--- a/shop-project/package.json
+++ b/shop-project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/core": "^13.7.0",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.11.0",
     "pinia": "^3.0.3",
