--- a/shop-project/package.json
+++ b/shop-project/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/vite": "^4.1.11",
     "@vueuse/core": "^13.7.0",
     "ant-design-vue": "^4.2.6",
